samples/_failures_safe/1761548530_edceb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37aec73a.c: In function ‘main’:
./samples/SAFE/__tmp_37aec73a.c:195:9: error: expected expression at end of input
  195 |         switch (
      |         ^~~~~~
./samples/SAFE/__tmp_37aec73a.c:195:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37aec73a.c:195:9: error: expected declaration or statement at end of input
